--- a/client/src/index.html
+++ b/client/src/index.html
@@ -5,7 +5,6 @@
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500">
     </head>
     <body>
-        <div id="app"></div>
-        <script src="bundle.js"></script>
+        <div id="root"></div>
     </body>
 </html>
