--- a/client/src/index.html
+++ b/client/src/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Alberta Data Institute</title>
+        <meta http-equiv="Content-type" content="text/html; charset=utf-8"/>
+        <title><%= htmlWebpackPlugin.options.title %></title>
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500">
     </head>
     <body>
