--- a/client/src/index.html
+++ b/client/src/index.html
@@ -4,6 +4,7 @@
         <meta http-equiv="Content-type" content="text/html; charset=utf-8"/>
         <title><%= htmlWebpackPlugin.options.title %></title>
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500">
+        <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     </head>
     <body>
         <div id="root"></div>
